# dotfiles

./: .clangd  .gitmodules  .p10k.zsh  .zprofile  .zshrc  CMakeLists.txt  TODO.txt  installation.txt  packages.txt  pacman-packages-log.txt
fastfetch/: config.jsonc
gtk-3.0/: settings.ini
hypr/: hyprland.conf  hyprpaper.conf
hypr/scripts/: colors.sh  reload_colorscheme.sh
install/: baseTTYinstall.txt  fstab  fullPackages.txt  installation.txt  less  pacman-packages-log.txt
kitty/: kitty.conf
neofetch/: config.conf
rofi/: config.rasi
scripts/: figlet.sh  fontsearch.sh
wal/colors.d/: colors  colors-hyprland.conf  colors-kitty.conf  colors-konsole.colorscheme  colors-oomox  colors-putty.reg  colors-rofi-dark.rasi  colors-rofi-light.rasi  colors-speedcrunch.json  colors-sway  colors-tty.sh  colors-wal-dmenu.h  colors-wal-dwm.h  colors-wal-st.h  colors-wal-tabbed.h  colors-wal.vim  colors-wlogout.css  colors.Xresources  colors.css  colors.hs  colors.json  colors.scss  colors.sh  colors.yml  sequences  wal
wal/colors.d/schemes/: _home_fede__config_wallpaper_default_png_dark_None_None_1.1.0.json  _home_fede_dotfiles_wallpaper_default_png_dark_None_None_1.1.0.json
waybar/: config.jsonc  style.css  waybar
waybar/scripts/: mediaplayer.py
zsh/: .zcompdump  .zhistory  .zprofile  .zsh_history  .zshenv  .zshrc
